KubernetsFiles/notification/notification.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: kanban
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers: 
      - name: notification
        image: walymb/notification:latest
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keys-volume
          mountPath: /app/keys
      volumes:
      - name: keys-volume
        persistentVolumeClaim:
          claimName: keys-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: kanban
spec:
  selector:
    app: notification
  ports:
  - port: 9092
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: kanban
  labels:
    name: notification-ingress
spec:
  rules:
  - host: notification.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: notification-service
            port: 
              number: 9092
